src_lib/Tilengine.h

typedef unsigned char	uint8_t;	/*!< unsigned 8-bit wide data */
typedef unsigned char bool;		/*!< C++ bool type for C language */
/*! tile/sprite flags. Can be none or a combination of the following: */
typedef enum
{
	FLAG_NONE		= 0,			/*!< no flags */
	FLAG_FLIPX		= BITVAL(15),	/*!< horizontal flip */
	FLAG_FLIPY		= BITVAL(14),	/*!< vertical flip */
	FLAG_ROTATE		= BITVAL(13),	/*!< row/column flip (unsupported, Tiled compatibility) */
	FLAG_PRIORITY	= BITVAL(12),	/*!< tile goes in front of sprite layer */
}
TLN_TileFlags;
/*! 
 * layer blend modes. Must be one of these and are mutually exclusive:
 */
typedef enum
{
	BLEND_NONE,		/*!< blending disabled */
	BLEND_MIX25,	/*!< color averaging 1 */
	BLEND_MIX50,	/*!< color averaging 2 */
	BLEND_MIX75,	/*!< color averaging 3 */
	BLEND_ADD,		/*!< color is always brighter (simulate light effects) */
	BLEND_SUB,		/*!< color is always darker (simulate shadow effects) */
	BLEND_MOD,		/*!< color is always darker (simulate shadow effects) */
	BLEND_CUSTOM,	/*!< user provided blend function with TLN_SetCustomBlendFunction() */
	MAX_BLEND,
	BLEND_MIX = BLEND_MIX50
}
TLN_Blend;
/*! Tile information returned by TLN_GetLayerTile() */
typedef struct
{
	uint16_t index;	/*!< tile index */
	uint16_t flags;	/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	int row;		/*!< row number in the tilemap */
	int col;		/*!< col number in the tilemap */
	int xoffset;	/*!< horizontal position inside the title */
	int yoffset;	/*!< vertical position inside the title */
	uint8_t color;	/*!< color index at collision point */
	uint8_t type;	/*!< tile type */
	bool empty;		/*!< cell is empty*/
}
TLN_TileInfo;
typedef struct Palette*		 TLN_Palette;			/*!< Opaque palette reference */
typedef struct Spriteset*	 TLN_Spriteset;			/*!< Opaque sspriteset reference */
typedef struct Sequence*	 TLN_Sequence;			/*!< Opaque sequence reference */
TLNAPI bool TLN_SetLayerBlendMode (int nlayer, TLN_Blend mode, uint8_t factor);
TLNAPI bool TLN_SetLayerColumnOffset (int nlayer, int* offset);
TLNAPI bool TLN_SetLayerClip (int nlayer, int x1, int y1, int x2, int y2);
TLNAPI bool TLN_DisableLayerClip (int nlayer);
TLNAPI bool TLN_SetLayerMosaic (int nlayer, int width, int height);
TLNAPI bool TLN_DisableLayerMosaic (int nlayer);
TLNAPI bool TLN_ResetLayerMode (int nlayer);
TLNAPI bool TLN_DisableLayer (int nlayer);
TLNAPI TLN_Palette TLN_GetLayerPalette (int nlayer);
TLNAPI bool TLN_GetLayerTile (int nlayer, int x, int y, TLN_TileInfo* info);
/**@}*/

/** 
 * \anchor group_sprite
 * \name Sprites 
 * Sprites management */
/**@{*/
TLNAPI bool TLN_ConfigSprite (int nsprite, TLN_Spriteset spriteset, TLN_TileFlags flags);
TLNAPI bool TLN_SetSpriteSet (int nsprite, TLN_Spriteset spriteset);
TLNAPI bool TLN_SetSpriteFlags (int nsprite, TLN_TileFlags flags);
TLNAPI bool TLN_SetSpritePosition (int nsprite, int x, int y);
TLNAPI bool TLN_SetSpritePicture (int nsprite, int entry);
TLNAPI bool TLN_SetSpritePalette (int nsprite, TLN_Palette palette);
TLNAPI bool TLN_SetSpriteBlendMode (int nsprite, TLN_Blend mode, uint8_t factor);
TLNAPI bool TLN_SetSpriteScaling (int nsprite, float sx, float sy);
TLNAPI bool TLN_ResetSpriteScaling (int nsprite);
TLNAPI int  TLN_GetSpritePicture (int nsprite);
TLNAPI int  TLN_GetAvailableSprite (void);
TLNAPI bool TLN_EnableSpriteCollision (int nsprite, bool enable);
TLNAPI bool TLN_GetSpriteCollision (int nsprite);
TLNAPI bool TLN_DisableSprite (int nsprite);
TLNAPI TLN_Palette TLN_GetSpritePalette (int nsprite);
/**@}*/

/** 
 * \anchor group_animation
 * \name Animations 
 * Animation engine manager */
/**@{*/
TLNAPI bool TLN_SetPaletteAnimation (int index, TLN_Palette palette, TLN_Sequence sequence, bool blend);
TLNAPI bool TLN_SetPaletteAnimationSource (int index, TLN_Palette);
TLNAPI bool TLN_SetTilesetAnimation (int index, int nlayer, TLN_Sequence);
TLNAPI bool TLN_SetTilemapAnimation (int index, int nlayer, TLN_Sequence);
TLNAPI bool TLN_SetSpriteAnimation (int index, int nsprite, TLN_Sequence sequence, int loop);
TLNAPI bool TLN_GetAnimationState (int index);
TLNAPI bool TLN_SetAnimationDelay (int index, int delay);
TLNAPI int  TLN_GetAvailableAnimation (void);
TLNAPI bool TLN_DisableAnimation (int index);