bindings/python/tilengine.py

		
	def ResetMode(self):
		return _tln.TLN_ResetLayerMode(self)

	def SetBlendMode(self, mode, factor=0):
		return _tln.TLN_SetLayerBlendMode(self, mode, 0)

	def SetColumnOffset(self, offsets):
		return _tln.TLN_SetLayerColumnOffset(self, offsets)

	def SetClip(self, x1, y1, x2, y2):
		return _tln.TLN_SetLayerClip(self, x1, y1, x2, y2)

	def DisableClip(self):
		return _tln.TLN_DisableLayerClip(self)

	def SetMosaic(self, pixel_w, pixel_h):
		return _tln.TLN_SetLayerMosaic(self, pixel_w, pixel_h)

	def DisableMosaic(self):
		return _tln.TLN_DisableLayerMosaic(self)
		
	def Disable(self):
		return _tln.TLN_DisableLayer(self)

	def GetPalette(self):
		return Palette(_tln.TLN_GetLayerPalette(self))
		
	def GetTile(self, x, y, tile_info):
		return _tln.TLN_GetLayerTile(self, x, y, tile_info)

def CreateTileInfoPtr(info):
	return POINTER(TileInfo)(info)
	
# sprite management -----------------------------------------------------------
_tln.TLN_ConfigSprite.argtypes = [c_int, c_void_p, c_ushort]
_tln.TLN_ConfigSprite.restype = c_bool
_tln.TLN_SetSpriteSet.argtypes = [c_int, c_void_p]
_tln.TLN_SetSpriteSet.restype = c_bool
_tln.TLN_SetSpriteFlags.argtypes = [c_int, c_ushort]
_tln.TLN_SetSpriteFlags.restype = c_bool
_tln.TLN_SetSpritePosition.argtypes = [c_int, c_int, c_int]
_tln.TLN_SetSpritePosition.restype = c_bool
_tln.TLN_SetSpritePicture.argtypes = [c_int, c_int]
_tln.TLN_SetSpritePicture.restype = c_bool
_tln.TLN_SetSpritePalette.argtypes = [c_int, c_void_p]
_tln.TLN_SetSpritePalette.restype = c_bool
_tln.TLN_SetSpriteBlendMode.argtypes = [c_int, c_int, c_ubyte]
_tln.TLN_SetSpriteBlendMode.restype = c_bool
_tln.TLN_SetSpriteScaling.argtypes = [c_int, c_float, c_float]
_tln.TLN_SetSpriteScaling.restype = c_bool
_tln.TLN_ResetSpriteScaling.argtypes = [c_int]
_tln.TLN_ResetSpriteScaling.restype = c_bool
_tln.TLN_GetSpritePicture.argtypes = [c_int]
_tln.TLN_GetSpritePicture.restype = c_int
_tln.TLN_GetAvailableSprite.restype = c_int
_tln.TLN_EnableSpriteCollision.argtypes = [c_int, c_bool]
_tln.TLN_EnableSpriteCollision.restype = c_bool
_tln.TLN_GetSpriteCollision.argtypes = [c_int]
_tln.TLN_GetSpriteCollision.restype = c_bool
_tln.TLN_DisableSprite.argtypes = [c_int]
_tln.TLN_DisableSprite.restype = c_bool
_tln.TLN_GetSpritePalette.argtypes = [c_int]
_tln.TLN_GetSpritePalette.restype = c_void_p

def GetAvailableSprite():
	return _tln.TLN_GetAvailableSprite()

class Sprite:
	def __init__(self, index):
		self._as_parameter_ = index

	def Setup(self, spriteset, flags):
		return _tln.TLN_ConfigSprite(self, spriteset, flags)

	def SetSpriteSet(self, spriteset):
		return _tln.TLN_SetSpriteSet(self, spriteset)

	def SetFlags(self, flags):
		return _tln.TLN_SetSpriteFlags(self, flags)
		
	def SetPosition(self, x, y):
		return _tln.TLN_SetSpritePosition(self, x, y)
		
	def SetPicture(self, picture):
		return _tln.TLN_SetSpritePicture(self, picture)

	def SetPalette(self, palette):
		return _tln.TLN_SetSpritePalette(self, palette)

	def SetBlendMode(self, mode):
		return _tln.TLN_SetSpriteBlendMode(self, mode)

	def SetScaling(self, sx, sy):
		return _tln.TLN_SetSpriteScaling(self, sx, sy)

	def ResetScaling(self):
		return _tln.TLN_ResetSpriteScaling(self)

	def GetPicture(self):
		return _tln.TLN_GetSpritePicture(self)

	def EnableCollision(self, mode):
		return _tln.TLN_EnableSpriteCollision(self, mode)
		
	def GetCollision(self):
		return _tln.TLN_GetSpriteCollision(self)
		
	def Disable(self):
		return _tln.TLN_DisableSprite(self)

	def GetPalette(self):
		return Palette(_tln.TLN_GetSpritePalette(self))

# animation engine ------------------------------------------------------------
_tln.TLN_SetPaletteAnimation.argtypes = [c_int, c_void_p, c_void_p, c_bool]
_tln.TLN_SetPaletteAnimation.restype = c_bool
_tln.TLN_SetPaletteAnimationSource.argtypes = [c_int, c_void_p]
_tln.TLN_SetPaletteAnimationSource = c_bool
_tln.TLN_SetTilesetAnimation.argtypes = [c_int, c_int, c_void_p]
_tln.TLN_SetTilesetAnimation.restype = c_bool
_tln.TLN_SetTilemapAnimation.argtypes = [c_int, c_int, c_void_p]
_tln.TLN_SetTilemapAnimation.restype = c_bool
_tln.TLN_SetSpriteAnimation.argtypes = [c_int, c_int, c_void_p, c_int]
_tln.TLN_SetSpriteAnimation.restype = c_bool
_tln.TLN_GetAnimationState.argtypes = [c_int]
_tln.TLN_GetAnimationState.restype = c_bool
_tln.TLN_SetAnimationDelay.argtypes = [c_int, c_int]
_tln.TLN_SetAnimationDelay.restype = c_bool
_tln.TLN_GetAvailableAnimation.restype = c_int
_tln.TLN_DisableAnimation.argtypes = [c_int]
_tln.TLN_DisableAnimation.restype = c_bool

def GetAvailableAnimation():
	return _tln.TLN_GetAvailableAnimation()

class Animation:

	def __init__(self, index):
		self._as_parameter_ = index

	def SetPaletteAnimation(self, palette, sequence, blend):
		return _tln.TLN_SetPaletteAnimation(self, palette, sequence, blend)

	def SetPaletteAnimationSource(self, palette):
		return _tln.TLN_SetPaletteAnimationSource(self, palette)

	def SetTilesetAnimation(self, layer, sequence):
		return _tln.TLN_SetTilesetAnimation(self, layer, sequence)

	def SetTilemapAnimation(self, layer, sequence):
		return _tln.TLN_SetTilemapAnimation(self, layer, sequence)

	def SetSpriteAnimation(self, sprite, sequence, loop):
		return _tln.TLN_SetSpriteAnimation(self, sprite, sequence, loop)

	def GetState(self):
		return _tln.TLN_GetAnimationState(self)

	def SetDelay(self, delay):
		return _tln.TLN_SetAnimationDelay(self, delay)

	def Disable(self):
		return _tln.TLN_DisableAnimation(self)